# sbir-plugin-cc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sbir-proposal-plugin.md
.claude-plugin/: plugin.json
.nwave/: des-config.json
agents/: sbir-compliance-sheriff.md  sbir-continue.md  sbir-corpus-librarian.md  sbir-debrief-analyst.md  sbir-feedback-collector.md  sbir-formatter.md  sbir-orchestrator.md  sbir-partner-builder.md  sbir-profile-builder.md  sbir-quality-discoverer.md  sbir-researcher.md  sbir-reviewer.md  sbir-setup-wizard.md  sbir-solution-shaper.md  sbir-strategist.md  sbir-submission-agent.md  sbir-topic-scout.md  sbir-tpoc-analyst.md  sbir-writer.md
commands/: continue.md  proposal-developer-feedback.md  proposal-draft-figure.md  proposal-draft.md  proposal-format.md  proposal-new.md  proposal-partner-screen.md  proposal-partner-set.md  proposal-partner-setup.md  proposal-profile-update.md  proposal-quality-discover.md  proposal-quality-update.md  proposal-rigor.md  proposal-shape.md  proposal-status.md  proposal-switch.md  proposal-tpoc-ingest.md  proposal-tpoc-questions.md  proposal-wave-final-review.md  proposal-wave-strategy.md  proposal-wave-visuals.md  sbir-proposal-check.md  sbir-proposal-compliance-add.md  sbir-proposal-config-format.md  sbir-proposal-debrief.md  sbir-proposal-draft-figure.md  sbir-proposal-format.md  sbir-proposal-iterate.md  sbir-proposal-new.md  sbir-proposal-profile-setup.md  sbir-proposal-quality-status.md  sbir-proposal-status.md  sbir-proposal-submit-prep.md  sbir-proposal-submit.md  sbir-proposal-tpoc-ingest.md  sbir-proposal-tpoc-questions.md  sbir-proposal-wave-final-review.md  sbir-proposal-wave-strategy.md  sbir-proposal-wave-visuals.md  sbir-setup.md  (+2 more)
(+1001 files in other folders)
