[project]
name = "sbir-proposal-plugin-pes"
version = "0.1.0"
description = "PES enforcement system for the SBIR Proposal Plugin"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "mutmut>=3.2",
]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
python_files = ["test_*.py", "*_steps.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "scripts"

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["scripts/pes"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
targets = ["scripts/pes"]
skips = ["B101"]

[tool.mutmut]
paths_to_mutate = "scripts/pes/"
tests_dir = "tests/"
runner = "python -m pytest tests/ -x -q"
